--- a/Translate/app/src/main/res/values/strings.xml
+++ b/Translate/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Apollo翻译</string>
     <string name="share_title">翻译</string>
+    <string name="title_activity_ble_device_manager">BleDeviceManagerActivity</string>
 </resources>
