--- a/Translate/app/src/main/res/values/strings.xml
+++ b/Translate/app/src/main/res/values/strings.xml
@@ -8,7 +8,13 @@
     <string name="phone_msg">密码:</string>
     <string name="phone_msg_again">确认密码:</string>
     <string name="login">登录</string>
-    <string name="register">注册</string>
+    <string name="register">确认注册</string>
     <string name="forget_msg">忘记密码?</string>
+
+    <string name="device_manager">设备管理</string>
+    <string name="share_other">推荐给朋友</string>
+    <string name="often_question">常见问题</string>
+    <string name="about">关于</string>
+    <string name="exit">退出登录</string>
 
 </resources>
