--- a/Translate/app/src/main/res/values/strings.xml
+++ b/Translate/app/src/main/res/values/strings.xml
@@ -3,6 +3,9 @@
     <string name="share_title">翻译</string>
     <string name="title_activity_ble_device_manager">BleDeviceManagerActivity</string>
 
+    <string name="tran_cn">中文</string>
+    <string name="tran_zn">英文</string>
+
     <string name="phone_num">手机号:</string>
     <string name="phone_code">验证码:</string>
     <string name="phone_msg">密码:</string>
